fixed alignement of the tools, regression of insert elements, started new tests

--- a/packages/silex-lib/src/css/menu.css
+++ b/packages/silex-lib/src/css/menu.css
@@ -31,6 +31,7 @@
 	text-overflow: ellipsis;
 	opacity: 0.5;
 	margin: 25px 4px 1px 45px;
+	padding-right: 5px; /* because the last letter is cut otherwise (italic text) */
 	overflow-x: hidden;
 	overflow-y: hidden;
 	white-space: nowrap;
